force-app/main/default/objects/Resume_Section__c/Resume_Section__c.object-meta.xml
<CustomObject>
    <label>Resume Section</label>
    <nameField>
        <displayFormat>RS-{000000}</displayFormat>
        <label>Resume Section Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Resume Sections</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>