force-app/main/default/objects/Resume_Section__c/fields/Custom_Title__c.field-meta.xml
<CustomField>
    <fullName>Custom_Title__c</fullName>
    <description>Allows user to rename &quot;Experience&quot; to &quot;Professional History&quot;.</description>
    <label>Custom Title</label>
    <length>100</length>
    <type>Text</type>
</CustomField>