force-app/main/default/objects/Resume_Section__c/fields/Is_Visible__c.field-meta.xml
<CustomField>
    <fullName>Is_Visible__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Toggle to hide/show the section without deleting data.</description>
    <label>Is Visible</label>
    <type>Checkbox</type>
</CustomField>