force-app/main/default/objects/Resume_Section__c/fields/Order__c.field-meta.xml
<CustomField>
    <fullName>Order__c</fullName>
    <description>Used by LWC to sort sections vertically.</description>
    <label>Display Order</label>
    <precision>2</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>