force-app/main/default/objects/Resume_Section__c/fields/Section_type__c.field-meta.xml
<CustomField>
    <fullName>Section_type__c</fullName>
    <label>Section type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Summary</fullName>
            </value>
            <value>
                <fullName>Experience</fullName>
            </value>
            <value>
                <fullName>Education</fullName>
            </value>
            <value>
                <fullName>Skills</fullName>
            </value>
            <value>
                <fullName>Projects</fullName>
            </value>
            <value>
                <fullName>Languages</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>